--- a/todo_api/main/templates/main/login.html
+++ b/todo_api/main/templates/main/login.html
@@ -1,10 +1,24 @@
 {% extends 'main/base.html' %}
 {% block content %}
 <h4 class="text-center my-3 pb-3">To Do App</h4>
+
 <form method="POST" class="text-center">
     {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="btn btn-primary">Login</button>
+    <div class="form-outline mb-4">
+        <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="username" required />
+        <label class="form-label" for="form3Example1cg">Username</label>
+    </div>
+
+    <div class="form-outline mb-4">
+        <input type="password" id="form3Example4cg" class="form-control form-control-lg" name="password" required />
+        <label class="form-label" for="form3Example4cg">Password</label>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark fs-6 w-25">Login</button>
+    </div>
+
+    <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="{% url 'main:register' %}"
+        class="fw-bold text-body link-primary">Create</a></p>
 </form>
-<p class="text-center">Don't have an account? <a href="{% url 'main:register' %}">Create</a></p>
 {% endblock %}
