--- a/todo_api/main/templates/main/register.html
+++ b/todo_api/main/templates/main/register.html
@@ -3,8 +3,26 @@
 <h4 class="text-center my-3 pb-3">To Do App</h4>
 <form method="POST" class="text-center">
     {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="btn btn-primary">Register</button>
+    <div class="form-outline mb-4">
+        <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="username" required />
+        <label class="form-label" for="form3Example1cg">Username</label>
+    </div>
+
+    <div class="form-outline mb-4">
+        <input type="password" id="form3Example4cg" class="form-control form-control-lg" name="password1" required />
+        <label class="form-label" for="form3Example4cg">Password</label>
+    </div>
+
+    <div class="form-outline mb-4">
+        <input type="password" id="form3Example4cdg" class="form-control form-control-lg" name="password2" required />
+        <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark fs-6 w-25">Register</button>
+    </div>
+
+    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="{% url 'main:login' %}"
+        class="fw-bold text-body link-primary">Login here</a></p>
 </form>
-<p class="text-center">Already have an account? <a href="{% url 'main:login' %}">Login</a></p>
 {% endblock %}
